# hypixel.py

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  publish.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-docs.yml  build.yml  publish-to-pypi.yml  tests.yml
docs/: api.rst  conf.py  examples.rst  index.rst  intro.rst  quickstart.rst  requirements.txt  test.rst
docs/_static/: custom.css  custom.js
docs/extensions/: attributetable.py  exception_hierarchy.py
examples/: achievements.py  ban_info.py  bedwars_lobby.py  cache_example.py  caching.py  converting_time.py  first_login.py  friends.py  guild.py  guild_member.py  key.py  key_queries.py  leaderboard.py  multiple_contexts.py  no_context.py  parkour.py  player_count.py  player_status.py
hypixel/: __init__.py  achievement.py  aliases.py  client.py  color.py  errors.py  game.py  utils.py
hypixel/constants/: __init__.py  achievements.py  aliases.py  color_types.py  game_types.py  player.py  rank_types.py
hypixel/models/: __init__.py  aliases.py  bans.py  bedwars.py  color.py  friend.py  games.py  guild.py  key.py  leaderboards.py  player.py  status.py  types.py  utils.py
hypixel/models/player/: __init__.py  aliases.py  arcade.py  bedwars.py  blitz.py  duels.py  murder_mystery.py  paintball.py  parkour.py  player.py  skywars.py  socials.py  tkr.py  tnt_games.py  uhc.py  utils.py  wool_games.py
hypixel/models/playerdata/: __init__.py  arcade.py  bedwars.py  blitz.py  duels.py  murder_mystery.py  paintball.py  parkour.py  skywars.py  socials.py  tkr.py  tnt.py  uhc.py  woolwars.py
tests/: __init__.py  conftest.py  test_ban_info.py  test_client.py  test_dataclasses.py  test_guild.py  test_key.py  test_player.py  test_player_count.py  test_player_friends.py  test_player_status.py  test_utils.py
tests/responses/: ban_info.json  guild.json  player.json  player_count.json  player_friends.json  player_status_offline.json  player_status_online.json
