[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypixel.py"
authors = [{name = "duhby"}]
description = "A Python wrapper for the Hypixel API"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Intended Audience:: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
]
license = {file = "LICENSE"}
dependencies = ["aiohttp>=3.8,<4"]
dynamic = ['version']

[project.optional-dependencies]
docs = [
    "furo==2022.9.15",
    "m2r2==0.3.3",
    "sphinx==5.1.1",
    "sphinxcontrib_trio==1.1.2",
    "sphinx_copybutton==0.5.0",
    "sphinx_design==0.3.0",
]
speed = [
    "aiodns>=3",
    "brotlipy>=0.7,<1",
    'cchardet==2.1.7; python_version<"3.10"',
    "ujson>=5.5,<6",
]
test = [
    "aioresponses==0.7.3",
    "pytest==7.1.3",
    "pytest-asyncio==0.19.0",
    "pytest-cov==4.0.0",
]

[project.urls]
Source = "https://github.com/duhby/hypixel.py/"
Changelog = "https://github.com/duhby/hypixel.py/blob/master/CHANGELOG.md"
Documentation = "https://hypixelpy.rtfd.io"
"Bug Tracker" = "https://github.com/duhby/hypixel.py/issues/"

[tool.pytest.ini_options]
minversion = "7.1.3"
addopts = "--cov=hypixel --cov-report term"
testpaths = ["tests"]

[tool.setuptools]
packages = [
    "hypixel",
    "hypixel.models",
    "hypixel.models.player",
]

[tool.setuptools.dynamic]
version = {attr = "hypixel.__version__"}

[tool.tbump]
github_url = "https://github.com/duhby/hypixel.py/"

[tool.tbump.version]
current = "0.4.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (.
  (?P<extra>.+)
  )?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "hypixel/__init__.py"
search = "__version__ = '{current_version}'"

[[tool.tbump.file]]
src = "docs/conf.py"
search = "release = '{current_version}'"

[[tool.tbump.before_commit]]
name = "check changelog"
cmd = "git grep -q {new_version} CHANGELOG.md"

# Or run some commands after the git tag and the branch
# have been pushed:
#  [[tool.tbump.after_push]]
#  name = "publish"
#  cmd = "./publish.sh"
