[tool.poetry]
name = "hypixel-py"
version = "0.4.2"
description = "A Python wrapper for the Hypixel API"
authors = ["Josh"]
license = "MIT"
readme = "README.rst"
packages = [{include = "hypixel"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Typing :: Typed",
]
include = ["CHANGELOG.md", "hypixel/py.typed"]

[tool.poetry.urls]
Source = "https://github.com/duhby/hypixel.py/"
Changelog = "https://github.com/duhby/hypixel.py/blob/master/CHANGELOG.md"
Documentation = "https://hypixelpy.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/duhby/hypixel.py/issues/"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8"
furo = {version = "^2022.9.15", optional = true}
m2r2 = {version = "^0.3.3", optional = true}
sphinx = {version = "^5.1.1", optional = true}
sphinxcontrib-trio = {version = "^1.1.2", optional = true}
sphinx-copybutton = {version = "^0.5.0", optional = true}
sphinx-design = {version = "^0.3.0", optional = true}
hypixel-py-data = {version = "^1.0.2", optional = true}
aiodns = {version = "^3.0.2", optional = true}
ujson = {version = "^5.5.0", optional = true}
cchardet = {version = "^2.1.7", optional = true, python = "<3.10"}
brotlipy = {version = "^0.7.0", optional = true}
aioresponses = {version = "^0.7.8", optional = true}
pytest = {version = "^7.1.3", optional = true}
pytest-asyncio = {version = "^0.19.0", optional = true}
pytest-cov = {version = "^4.0.0", optional = true}

[tool.poetry.extras]
docs = [
    "furo",
    "m2r2",
    "sphinx",
    "sphinxcontrib-trio",
    "sphinx-copybutton",
    "sphinx-design",
]
data = [
    "hypixel-py-data",
]
speed = [
    "aiodns",
    "ujson",
    "cchardet",
    "brotlipy",
]
test = [
    "aioresponses",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.pytest.ini_options]
minversion = "7.1.3"
addopts = "--cov=hypixel --cov-report term"
testpaths = ["tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
